--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-nav{
+::-webkit-scrollbar{
+    display: none;
+}
+
+nav {
     position: fixed;
     top: 0;
     width: 100%;
@@ -7,23 +11,90 @@ nav{
     background-color: none;
 }
 
-.nav-container{
+.nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
 }
 
-.logo{
+.logo {
     color: brown;
     font-size: 2rem;
-     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-.link-container > a{
+.link-container>a {
     margin-right: 1.5rem;
     text-decoration: none;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     font-weight: bold;
     font-size: large;
+}
+
+.master-container {
+    display: flex;
+    min-height: 100vh;
+}
+
+.bilde-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
+
+.bilde-container>img {
+    max-width: 100%;
+    max-height: 34rem;
+    object-fit: cover;
+}
+
+.innhold {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 3rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.tall {
+    font-family: "Cal Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20rem;
+    color: lightblue;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 15%;
+    opacity: 0.5;
+    transform: translateY(-6%);
+}
+
+.tekst-innhold {
+    position: relative;
+    z-index: 2;
+}
+
+.tittel {
+    font-family: "DM Serif Text", serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 4rem;
+    margin-bottom: 0.8rem;
+    line-height: 1.2;
+    white-space: nowrap;
+}
+
+.beskrivelse {
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 1.2rem;
+    line-height: 1.3;
+
 }
