--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     display: none;
 }
 
@@ -55,35 +55,34 @@ nav {
 .innhold {
     flex: 1;
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding: 3rem;
     position: relative;
     overflow: hidden;
     background-color: #a50044;
-    color: ;
 }
 
 .tall {
-    font-family: "Cal Sans", sans-serif;
-    font-weight: 400;
+    font-family: "Playwrite DK Loopet", cursive;
+    font-optical-sizing: auto;
+    font-weight: bold;
     font-style: normal;
-    font-size: 19rem;
-    color: lightblue;
+    font-size: 14rem;
     position: absolute;
     z-index: 1;
-    left: 1;
-    top: 15%;
-    opacity: 0.5;
-    transform: translateY(-7%);
+    left: 1.8rem;
+    top: 8%;
+    opacity: 0.4;
     color: #ffed02;
 }
 
 .tekst-innhold {
     position: relative;
     z-index: 2;
-    left: 3;
-    top: 8%;
+    margin-left: 2rem;
+    max-width: 32rem;
+    /*top: 8%;*/
     color: #fff;
 }
 
