--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav {
     font-size: large;
 }
 
-.master-container {
+.master-container, .junior-container {
     display: flex;
     min-height: 100vh;
 }
@@ -43,10 +43,10 @@ nav {
     justify-content: center;
     align-items: center;
     padding: 2rem;
-    background-color: #004d98;
+    background: linear-gradient(180deg,#004d98, #000);
 }
 
-.bilde-container>img {
+.bilde-container > img {
     max-width: 100%;
     max-height: 34rem;
     object-fit: cover;
@@ -60,7 +60,7 @@ nav {
     padding: 3rem;
     position: relative;
     overflow: hidden;
-    background-color: #a50044;
+    background: linear-gradient(180deg, #a50044, #000);
 }
 
 .tall {
@@ -102,4 +102,16 @@ nav {
     font-style: normal;
     font-size: 1.2rem;
     line-height: 1.3;
+}
+
+.content{
+    flex: 1;
+    display: flex;
+    background: linear-gradient(180deg, #000, #fff);
+}
+
+.bilde-karusell{
+    flex: 1;
+    display: flex;
+    background: linear-gradient(180deg, #000, #fff);
 }
