--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav {
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-.link-container > a {
+.link-container>a {
     margin-right: 1.5rem;
     text-decoration: none;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -32,14 +32,14 @@ nav {
     font-size: large;
 }
 
-.forside{
+.forside {
     position: relative;
     height: 100vh;
     width: 100%;
     overflow: hidden;
 }
 
-.forside-bilde{
+.forside-bilde {
     position: absolute;
     top: 0;
     left: 0;
@@ -49,10 +49,24 @@ nav {
     z-index: -1;
 }
 
-.forside-bilde > img{
+.forside-bilde>img {
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+
+.overskrift {
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: italic;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    font-size: 9rem;
 }
 
 .master-container {
@@ -66,10 +80,10 @@ nav {
     justify-content: center;
     align-items: center;
     padding: 2rem;
-    background: linear-gradient(180deg,#004d98, #000);
+    background: linear-gradient(180deg, #004d98, #000);
 }
 
-.bilde-container > img {
+.bilde-container>img {
     max-width: 100%;
     max-height: 34rem;
     object-fit: cover;
